--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,8 +7,10 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
+    "bootstrap": "^5.2.3",
     "query-string": "^6.14.1",
     "react": "^16.13.1",
+    "react-bootstrap": "^2.7.2",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
